--- a/luminar.css
+++ b/luminar.css
@@ -4,7 +4,24 @@
 {
     width:200px;
     height: 50px;
+
+}
+
+.slideimg
+{
+    width:500px;
+    height: 200px;
+}
+h1{
+    font-size: 15px;
+}
+p{
+    font-size: 10px;
 }
 
 
+}
+h1
+{
+    font-size: 52px;
 }
