--- a/luminar.css
+++ b/luminar.css
@@ -25,3 +25,12 @@ h1
 {
     font-size: 52px;
 }
+.btnviewcourse
+  {
+height: 50px;
+width:150px;
+color:rgb(255, 255, 255);
+background-color: purple;
+border-radius: 50px;
+
+  }
