--- a/luminar.css
+++ b/luminar.css
@@ -1,3 +1,9 @@
+
+.slideimg
+{
+    width:100%;
+    height: 500px;
+}
 @media(max-width:500px)
 {
 .luminarimg
@@ -7,14 +13,12 @@
 
 }
 
-.slideimg
-{
-    width:500px;
-    height: 200px;
-}
+
 h1{
     font-size: 15px;
+
 }
+
 p{
     font-size: 10px;
 }
@@ -27,10 +31,12 @@ h1
 }
 .btnviewcourse
   {
-height: 50px;
-width:150px;
+height: 70px;
+width:200px;
 color:rgb(255, 255, 255);
-background-color: purple;
+background-color: rgb(82, 11, 82);
 border-radius: 50px;
+margin-bottom: 90px;
+margin-top: 25px;
 
   }
