--- a/luminar.css
+++ b/luminar.css
@@ -22,8 +22,20 @@ h1{
 p{
     font-size: 10px;
 }
-
-
+.btnviewcourse
+  {
+    height:35px;
+width:80px;
+font-size:12px;
+border-radius:20px;
+background-color: rgb(184, 174, 184);
+  }
+  .subbtn
+  {
+    height: 20px;
+    width: 80;
+    font-size: 15;
+  }
 }
 h1
 {
@@ -38,5 +50,17 @@ background-color: rgb(82, 11, 82);
 border-radius: 50px;
 margin-bottom: 90px;
 margin-top: 25px;
+
+  }
+  .modtext
+  {
+    border: none;
+  }
+  .subbtn
+  {
+    background-color: rgb(98,12,141);
+    width: 130px;
+    height:35px;
+    color: white;
 
   }
